Added TopUpWallet feature (Command, Handler, Validator, Endpoint)

--- a/Wallet.Application/Wallet.Application.csproj
+++ b/Wallet.Application/Wallet.Application.csproj
@@ -16,4 +16,14 @@
     <ProjectReference Include="..\Wallet.Domain\Wallet.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Transactions\Payments\Commands\" />
+    <Folder Include="Transactions\Payments\DTOs\" />
+    <Folder Include="Transactions\Payments\Queries\" />
+    <Folder Include="Transactions\Refunds\Commands\" />
+    <Folder Include="Transactions\Refunds\DTOs\" />
+    <Folder Include="Transactions\Refunds\Queries\" />
+    <Folder Include="Transactions\TopUp\Queries\" />
+  </ItemGroup>
+
 </Project>
