--- a/Wallet.Application/Wallet.Application.csproj
+++ b/Wallet.Application/Wallet.Application.csproj
@@ -10,10 +10,20 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wallet.Domain\Wallet.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Security\Commands\Login\" />
+    <Folder Include="Security\Commands\Logout\" />
+    <Folder Include="Security\Commands\RefreshToken\" />
+    <Folder Include="Security\DTOs\" />
+    <Folder Include="Transactions\History\Queries\GetTransactionById\" />
+    <Folder Include="Transactions\History\Queries\GetRecentTransactions\" />
   </ItemGroup>
 
 </Project>
