Added Login, HashingPassword, UpdatingRegister, features (Commands , Handlers, Validators, Endpoints)

--- a/Wallet.Api/appsettings.json
+++ b/Wallet.Api/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "MySuperStrongSecretKeyMohamed2025Wallet",
+    "Issuer": "WalletApi",
+    "Audience": "WalletApiUsers",
+    "AccessTokenExpirationMinutes": 30
+  }
+
 }
