--- a/Wallet.Application/Wallet.Application.csproj
+++ b/Wallet.Application/Wallet.Application.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,11 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Security\Commands\Login\" />
     <Folder Include="Security\Commands\Logout\" />
     <Folder Include="Security\Commands\RefreshToken\" />
-    <Folder Include="Security\DTOs\" />
-    <Folder Include="Transactions\History\Queries\GetTransactionById\" />
     <Folder Include="Transactions\History\Queries\GetRecentTransactions\" />
   </ItemGroup>
 
